# python-learning-journey

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: test_practice.py
src/Basic/: Basic_Syntax.py  Conditionals.py  Exceptions.py  Functions.py  Lists_Tuples_Sets_and_Dictionaries.py  Typecasting.py  Variables_and_Data_Types.py  loops.py
